--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,46 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nathan Murphy</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/1acc79af87.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <section id="about-me">
-    <nav>
+      <nav>
         <div class="personal__logo">David Bragg</div>
         <ul class="nav__link--list">
-            <li>
-        <a href="" class="
-        nav__link--anchor
-        link__hover-effect
-        link__hover-effect--black
-        ">Languages</a>
-        <a href="" class="
-        nav__link--anchor
-        link__hover-effect
-        link__hover-effect--black
-        ">Projects</a>nav__
-        <a href="" class="
-        nav__link--anchor
-        nav__link--anchor-primary
-        ">Contact</a>
-    </li>
-    </ul>
-   </nav>
-   <div>
+          <li>
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Languages</a
+            >
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Projects</a
+            >
+            <a href="" class="nav__link--anchor nav__link--anchor-primary"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <div class="flex flex-1">
+        <div class="about-me__info row">
+          <div class="about-me__info--container">
+            <figure class="about-me__picture--mask">
+              <img
+                src="./assets/me.jpeg"
+                class="about-me__picture"
+                alt="picture of me"
+              />
+            </figure>
+            <h1 class="about-me__info--title">
+              Hey! I'm <span class="text--purple">Bragg</span>
+            </h1>
 
-   </div>
-
-<div class="about-me__info row">
-<div class="about-me__info--container">
-    <figure>
-        <img src="./assets/me.jpeg" alt="">
-    </figure>
-</div>
-</div>
-</div>
-   </section>
-</body>
+            <p class="about-me__info-para">
+              ipsum dolor sit amet,
+              <strong class="text--purple">adipiscing elit</strong>, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad mi
+            </p>
+            <div class="about-me__links">
+              <a href="#" class="about-me__link">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+              <a href="#" class="about-me__link">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+              <a href="#" class="about-me__link">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+              <a href="#" class="about-me__link">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </div>
+          </div>
+          <figure class="about-me__img--container">
+            <img
+              src="./assets/undraw_websites.svg"
+              class="about-me__img"
+              alt=""
+            />
+          </figure>
+        </div>
+      </div>
+    </section>
+    <section id="Languages">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title"> My<span class="text--purple"> Tech Stack</span></h1>
+          <div class="language__list">
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  class="language__img"
+                  alt=""/>
+                </figure>
+                  <span class="language__name">HTML</span>
+                </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  class="language__img"
+                  alt=""/>
+                </figure>
+                  <span class="language__name">HTML</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  class="language__img"
+                  alt=""/>
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  class="language__img"
+                  alt=""/>
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  class="language__img"
+                  alt=""/>
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  class="language__img"
+                  alt=""/>
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  class="language__img"
+                  alt=""/>
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="projects">
+        <div class="container">
+           <div class="row">
+               <h1 class="section__title">Here are some of my <span class="text--purple"> projects</span></h1>
+               <ul class="project__list">
+                <li class="project">
+                    <div class="project__wrapper">
+                    <img src="./assets/loopit.png"  class="project__img">
+                <div class="project_description"></div>    
+                </div>
+                </li>
+               </ul>
+           </div> 
+        </div>
+    </section>
+  </body>
 </html>
