adding hover effects

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -215,9 +215,51 @@
                     </div>
                 </li>
                 </ul>
-          
                 </div>
            </div> 
     </section>
+    <footer>
+      
+
+      <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+          <figure class="footer__logo">
+            <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+          </figure>
+          <span class="footer__logo--popper">
+            Top
+            <i class="fas fa-arrow-up"></i>
+          </span>
+        </a>
+        <div class="footer__social--list">
+          <a href="https://google.com"target="_blank" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " >Google</a>
+          <a href="https://google.com"target="_blank" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " >LinkedIn</a><a href="https://google.com"target="_blank" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " >Facebook</a><a href="mailto:email@email.com"target="_blank" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " >Email</a>
+          <a href="./assets/Example Resume.pdf"target="_blank" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " >Resume</a>
+        </div>
+        <div class="footer__copyright">
+          Copyright  &copy Nathan Murphy &copy 
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
