--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,20 +15,25 @@
       <nav>
         <div class="personal__logo">David Bragg</div>
         <ul class="nav__link--list">
-          <li>
-            <a
-              href=""
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Languages</a
-            >
-            <a
-              href=""
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Projects</a
-            >
-            <a href="" class="nav__link--anchor nav__link--anchor-primary"
-              >Contact</a
-            >
+          <li class="nav__link">
+            <a href="#Languages"
+              class="nav__link--anchor
+               link__hover-effect 
+               link__hover-effect--black">
+               Languages</a>
+            </li>
+            <li class="nav__link">
+            <a href="#projects"
+              class="nav__link--anchor
+               link__hover-effect
+                link__hover-effect--black">
+                Projects</a>
+            </li>
+            <li class="nav__link">
+            <a href="mailto@youremail.com" class="
+            nav__link--anchor 
+            nav__link--anchor-primary">
+            Contact</a>
           </li>
         </ul>
       </nav>
@@ -43,7 +48,7 @@
               />
             </figure>
             <h1 class="about-me__info--title">
-              Hey! I'm <span class="text--purple">Bragg</span>
+              Hey! I'm <span class="text--purple">Bragg</span><span class="wave">👋</span>
             </h1>
 
             <p class="about-me__info-para">
@@ -62,7 +67,7 @@
               <a href="#" class="about-me__link">
                 <i class="fa-brands fa-linkedin"></i>
               </a>
-              <a href="#" class="about-me__link">
+              <a href="./assets/Example Resume.pdf" target="_blank" class="about-me__link">
                 <i class="fa-brands fa-linkedin"></i>
               </a>
             </div>
